lab1/Test/L1-A-10-63.output
Error Type A at Line 7
Error Type B at Line 12
Error Type B at Line 15
Error Type B at Line 23
Error Type A at Line 31
Error Type B at Line 34
Error Type B at Line 54
