lab1/Test/L1-A-10-63.cmm
int FaMoUpW8oibCCz9 
;
int ;
struct KXNZ_tUHnFGAe5076J ;
struct iH haU7B ( struct {
}W2GOU ) {
  float W [ 745413480 $] ;
}
struct IztD8U ;
int ;
int eZAk3ZIyzgtCz ( ) {
  if ( B86RFnN7RBPc struct )   return NupzybIP_Ugf 
    ;

( }
int U ( ) {
  gIrPoOcMSRx ;
}
struct NP8AJOJj7gjxW_vpfT {
  int WPT8GrA6spWpBXQ ;
  int Oc0i2su8exIZc ;
  int pEXk8xlMpoR8AHSCgoiG ;
>   int ejRoID , sVTI = YnXPndkyzl3L = nQpRMjfIVNOhsU 
    && PrGEMpEmYe9 > ced7Uqw - ( h4YMjLuvMRVpvqh6 || iNHGAxgcXeGKBzU 
    <= AV + kbbMPrI2 / ! - FW ( BlF3fiPDfKJ < NVuKs0 * 
    e7_AiuSUWfHoSm8 [ OCyYFPQVPYgNze || fVzNl1WxlhsUTzVRDR 
    != ! OQaZkGkMSV18 [ PQXZyhhgm0jsW >= O - f02MA0BJVJQK2DU 
    * o ( l07Bo , VtptIaSxsAa || PH8FjBgLHwicPp == SDZm291gQ519 
    ( WQHAZdc - lu / 1991520331 / ! YJVCGYz3X1H ) ) ] 
    / 9276027.1315497263 && ! - - - sW_19 ( ) ] ) . H1LFOIfdDohfohL 
    ) %;
};
struct CqbuZUynSmLQRLrZm4LH ;
int r , DkfcdT . 

;
int ;
int ;
int h4TKTlzAtPZ ( ) {
  NHeE1u ;
  if ( FaKs43g )   JSBOTFaEVNk ;
else   if ( GRpoXPxEb_ )   Z9ZOV ;


  while ( _79aq )   Zu ;

  while ( c_p )   if ( FQuPUfn )   T1Vh_ ;
else {
    while ( yYWoyBxWacnKgu )     Z5D ;

  }

}
int HwjbcNlUI1sUtB1lV ( int ZxSWzW , int dvN8VJL ! 
  ) {
}
